# data_engineering_aufgabe

./: .gitignore  README.md  pyproject.toml
main/: 1_preprocess.py  2_load_job.py
